# ergodic_control_mppi

./: README.md  pyproject.toml  simulations.ipynb
configs/: mppi_params.yaml  params_loader.py
configs/jax/: params_loader.py
configs/torch/: params_loader.py
models/: double_integrator.py
models/torch/: double_integrator.py
mppi/: dynamics.py  mppi_controller.py  mppi_controller_old.py  mppi_core.py
mppi/jax/: mppi_core.py  stein.py
mppi/torch/: __init__.py  mppi_core.py  stein.py
scripts/: main.py  test.py
scripts/jax/: main.py
scripts/old_stuff/: test.py
scripts/torch/: main.py
utils/: utility_functions.py
