[project]
name = "mppi-control"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
    "numpy>=2.2.6",
    "tqdm",
    "pyyaml",
    "matplotlib"
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.20; python_version >= '3.9'",
]

torch = [
    "torch>=2.1; python_version == '3.8'",
]

dev = [
    "ipykernel>=7.1.0"
]